--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Asynv Javascript</title>
   </head>
   <body>
+    <h1>Async Javascript</h1>
     <script src="script.js"></script>
   </body>
 </html>
